# python_strip_whitespace

./: .gitignore  Pipfile  README.rst  f.js  pyproject.toml  setup.py  test.py
.github/: release.yml
django_strip_whitespace/middlewares/libs/: __init__.py  _compress_gzip.py  _guess_content_type.py  _html_minifier.py  compress.py
django_strip_whitespace/middlewares/libs/compressors/: __init__.py
middlewares/: HtmlStripWhiteSpaceMiddleware.py
python_strip_whitespace/: __init__.py  compress.py  minify.py
python_strip_whitespace/functions/: guess_content_type.py  regex.py
python_strip_whitespace/functions/compressors/: brotli.py  gzip.py  zstd.py
python_strip_whitespace/functions/decompressors/: brotli.py  gzip.py  zstd.py
python_strip_whitespace/functions/regex_patterns/: __init__.py  alpinejs.py  animejs.py  html.py
python_strip_whitespace/html/: html_minifier.py  line_break.py  nbsp_characters.py
python_strip_whitespace/middlewares/: HtmlStripWhiteSpaceMiddleware.py
strip_whitespace/middlewares/: HtmlStripWhiteSpaceMiddleware.py
strip_whitespace/middlewares/libs/: __init__.py  compress.py
strip_whitespace/middlewares/libs/content/: __init__.py
strip_whitespace/middlewares/libs/decompressors/: __init__.py  gzip.py
strip_whitespace/middlewares/libs/functions/: guess_content_type.py  regex.py
strip_whitespace/middlewares/libs/html/: __init__.py  line_break.py  minifier.py  nbsp_characters.py
strip_whitespace/middlewares/libs/variables/: rust_bindings.py
tests/: test_line_break.py
(+8 files in other folders)
